# NotRedis

./: CMakeLists.txt  LICENSE  README.md
include/: kvick_core.h  nredis_core.h
src/: kvick_core.cpp  main.cpp  nredis_core.cpp
